Bug 678891 - Reduce delay for two-finger swipe on OS X Lion. r=mstange